--- a/composer.json
+++ b/composer.json
@@ -17,8 +17,8 @@
     ],
     "require": {
         "php": "^8.1",
-        "spatie/laravel-package-tools": "^1.14.0",
-        "illuminate/contracts": "^10.0"
+        "spatie/image-optimizer": "^1.7",
+        "spatie/laravel-package-tools": "^1.14.0"
     },
     "require-dev": {
         "laravel/pint": "^1.0",
@@ -35,8 +35,7 @@
     },
     "autoload": {
         "psr-4": {
-            "AbdelhamidErrahmouni\\ImageOptimizerCommand\\": "src/",
-            "AbdelhamidErrahmouni\\ImageOptimizerCommand\\Database\\Factories\\": "database/factories/"
+            "AbdelhamidErrahmouni\\ImageOptimizerCommand\\": "src/"
         }
     },
     "autoload-dev": {
@@ -74,10 +73,7 @@
         "laravel": {
             "providers": [
                 "AbdelhamidErrahmouni\\ImageOptimizerCommand\\ImageOptimizerCommandServiceProvider"
-            ],
-            "aliases": {
-                "ImageOptimizerCommand": "AbdelhamidErrahmouni\\ImageOptimizerCommand\\Facades\\ImageOptimizerCommand"
-            }
+            ]
         }
     },
     "minimum-stability": "dev",
